<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Status" Id="{b17f261c-4895-42c2-bc1c-9463b9426a1b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Status :
(
	NotReady,
	Ready,
	Starting,
	Running,
	Stoping,
	Fault
)USINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>